# gstreamer-training

./: demo3.c
gst-audiofilesink2/: .gitignore  configure.ac
gst-audiofilesink2/plugins/: Makefile.am  audio.raw  audio2.raw  audio3.raw  gstaudiofilesink2.c  gstaudiofilesink2.h  gstaudiofilesink2plugin.c
gst-audiofilesink2/tools/: Makefile.am  gst-audiofilesink2  gstaudiofilesink2.c
