plugin_LTLIBRARIES = libgstaudiofilesink2.la

# sources used to compile this plug-in
libgstaudiofilesink2_la_SOURCES = gstaudiofilesink2plugin.c gstaudiofilesink2.c gstaudiofilesink2.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstaudiofilesink2_la_CFLAGS = $(GST_CFLAGS)
libgstaudiofilesink2_la_LIBADD = $(GST_LIBS)
libgstaudiofilesink2_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

